[gd_scene load_steps=63 format=3 uid="uid://bbqvgiqtvvj75"]

[ext_resource type="Script" uid="uid://4hm4hev80moy" path="res://scripts/units/worker.gd" id="1_ybqxx"]
[ext_resource type="Texture2D" uid="uid://cbnayhrym7wdc" path="res://art/shapes/thin circle 64x64.png" id="2_smnw2"]
[ext_resource type="Texture2D" uid="uid://bqph6mpriwflb" path="res://art/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue.png" id="3_puwsk"]
[ext_resource type="Texture2D" uid="uid://dfgscgffwj1uk" path="res://art/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue-hammer-sheet.png" id="4_htvr8"]
[ext_resource type="AudioStream" uid="uid://e237u06bp3sc" path="res://sound/536736__egomassive__chop.ogg" id="5_vhbtc"]
[ext_resource type="Script" uid="uid://dx3d1p5c3wxrs" path="res://scripts/attackable.gd" id="6_0v272"]
[ext_resource type="PackedScene" uid="uid://vmpaix73ewbf" path="res://scenes/ui/health_bar.tscn" id="7_tts6a"]
[ext_resource type="Script" uid="uid://ceg5y3imnxxgt" path="res://scripts/ui/ui_details.gd" id="8_62yyd"]
[ext_resource type="Script" uid="uid://cpt7sfn43e801" path="res://scripts/ui/ui_detail.gd" id="9_a2ouy"]
[ext_resource type="Texture2D" uid="uid://t3syd2fhsa8w" path="res://art/Tiny Swords (Update 010)/Factions/Knights/Troops/Pawn/Blue/Pawn_Blue-still.png" id="10_d1guf"]
[ext_resource type="Texture2D" uid="uid://cseyvd3qgen6j" path="res://art/icons/RPG Graphics Pack - Icons/Pack 1B-Renamed/boot/boot_03.png" id="11_62yyd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_78wmw"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sfvsk"]
atlas = ExtResource("3_puwsk")
region = Rect2(0, 606, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm1fo"]
atlas = ExtResource("3_puwsk")
region = Rect2(192, 606, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv47k"]
atlas = ExtResource("3_puwsk")
region = Rect2(384, 606, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnwc3"]
atlas = ExtResource("3_puwsk")
region = Rect2(576, 606, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uugri"]
atlas = ExtResource("3_puwsk")
region = Rect2(768, 606, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8s4e"]
atlas = ExtResource("3_puwsk")
region = Rect2(960, 606, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_83te2"]
atlas = ExtResource("4_htvr8")
region = Rect2(0, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2pcm"]
atlas = ExtResource("4_htvr8")
region = Rect2(144, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcyiy"]
atlas = ExtResource("4_htvr8")
region = Rect2(288, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mo3d"]
atlas = ExtResource("4_htvr8")
region = Rect2(432, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwl6e"]
atlas = ExtResource("4_htvr8")
region = Rect2(576, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvlw6"]
atlas = ExtResource("4_htvr8")
region = Rect2(720, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jfpk"]
atlas = ExtResource("3_puwsk")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujtjc"]
atlas = ExtResource("3_puwsk")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud2e0"]
atlas = ExtResource("3_puwsk")
region = Rect2(448, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b64n2"]
atlas = ExtResource("3_puwsk")
region = Rect2(640, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bshw5"]
atlas = ExtResource("3_puwsk")
region = Rect2(832, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub7kq"]
atlas = ExtResource("3_puwsk")
region = Rect2(1024, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn2om"]
atlas = ExtResource("3_puwsk")
region = Rect2(64, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qgl2"]
atlas = ExtResource("3_puwsk")
region = Rect2(256, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1c4a"]
atlas = ExtResource("3_puwsk")
region = Rect2(448, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lur4q"]
atlas = ExtResource("3_puwsk")
region = Rect2(640, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_il2hk"]
atlas = ExtResource("3_puwsk")
region = Rect2(832, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec30m"]
atlas = ExtResource("3_puwsk")
region = Rect2(1024, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qscgq"]
atlas = ExtResource("3_puwsk")
region = Rect2(0, 414, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsdsm"]
atlas = ExtResource("3_puwsk")
region = Rect2(192, 414, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eda8p"]
atlas = ExtResource("3_puwsk")
region = Rect2(384, 414, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjv0a"]
atlas = ExtResource("3_puwsk")
region = Rect2(576, 414, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_er75u"]
atlas = ExtResource("3_puwsk")
region = Rect2(768, 414, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4vbr"]
atlas = ExtResource("3_puwsk")
region = Rect2(960, 414, 192, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3imwk"]
atlas = ExtResource("3_puwsk")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hjoj"]
atlas = ExtResource("3_puwsk")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kce5"]
atlas = ExtResource("3_puwsk")
region = Rect2(448, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_di272"]
atlas = ExtResource("3_puwsk")
region = Rect2(640, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0q06"]
atlas = ExtResource("3_puwsk")
region = Rect2(832, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu114"]
atlas = ExtResource("3_puwsk")
region = Rect2(1024, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbvut"]
atlas = ExtResource("3_puwsk")
region = Rect2(64, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t87wn"]
atlas = ExtResource("3_puwsk")
region = Rect2(256, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfoyr"]
atlas = ExtResource("3_puwsk")
region = Rect2(448, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r037"]
atlas = ExtResource("3_puwsk")
region = Rect2(640, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_givc6"]
atlas = ExtResource("3_puwsk")
region = Rect2(832, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_18yvc"]
atlas = ExtResource("3_puwsk")
region = Rect2(1024, 1024, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5imfe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfvsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm1fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv47k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnwc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uugri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8s4e")
}],
"loop": true,
"name": &"chop",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_83te2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2pcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcyiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mo3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwl6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvlw6")
}],
"loop": true,
"name": &"hammer",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jfpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujtjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud2e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b64n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bshw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub7kq")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn2om")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qgl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1c4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lur4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il2hk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec30m")
}],
"loop": true,
"name": &"idle_holding",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qscgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsdsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eda8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjv0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er75u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4vbr")
}],
"loop": true,
"name": &"mine",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3imwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hjoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kce5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di272")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0q06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu114")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbvut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t87wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfoyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r037")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_givc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18yvc")
}],
"loop": true,
"name": &"run_holding",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l5a1"]
size = Vector2(41.235, 55.355)

[sub_resource type="CircleShape2D" id="CircleShape2D_ynejq"]
radius = 326.337

[sub_resource type="CircleShape2D" id="CircleShape2D_4kigh"]
radius = 924.15

[sub_resource type="CircleShape2D" id="CircleShape2D_3t2kq"]
radius = 40.1123

[sub_resource type="CircleShape2D" id="CircleShape2D_3ckoi"]
radius = 347.052

[sub_resource type="Resource" id="Resource_g8j7w"]
script = ExtResource("9_a2ouy")
image = ExtResource("10_d1guf")
ui_detail_type = 1
use_detail = false
detail = 0.0
metadata/_custom_type_script = "uid://cpt7sfn43e801"

[sub_resource type="Resource" id="Resource_nlwm3"]
script = ExtResource("9_a2ouy")
image = ExtResource("11_62yyd")
ui_detail_type = 2
use_detail = true
detail = 50.0
metadata/_custom_type_script = "uid://cpt7sfn43e801"

[node name="Worker" type="CharacterBody2D" groups=["Attackable"]]
script = ExtResource("1_ybqxx")
collection_rate = 2.0
max_resource_holding = 10
team = 1
movement_speed = 150.0
cost = {
1: 0.0,
2: 0.0,
3: 50.0,
4: 1
}
metadata/_edit_group_ = true

[node name="Attackable" type="Node2D" parent="."]
script = ExtResource("6_0v272")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
max_speed = 1000.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_78wmw")

[node name="Selection Circle" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0, 1, 0, 1)
position = Vector2(0, -6)
scale = Vector2(0.4375, 0.353125)
texture = ExtResource("2_smnw2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -27)
sprite_frames = SubResource("SpriteFrames_5imfe")
animation = &"run_holding"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="SelectionHoverArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionHoverArea"]
visible = false
position = Vector2(0, -25)
shape = SubResource("RectangleShape2D_4l5a1")

[node name="ResourceGatherTick" type="Timer" parent="."]

[node name="ResourceHoldPos" type="Node2D" parent="."]
z_index = 2
position = Vector2(5.09, -29.12)

[node name="SearchAreaSmall" type="Area2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchAreaSmall"]
shape = SubResource("CircleShape2D_ynejq")
debug_color = Color(0, 0.6, 0.701961, 0.0470588)

[node name="SearchAreaLarge" type="Area2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchAreaLarge"]
shape = SubResource("CircleShape2D_4kigh")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="WoodChop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vhbtc")
volume_db = -2.039

[node name="Facing" type="RayCast2D" parent="."]

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
shape = SubResource("CircleShape2D_3t2kq")
debug_color = Color(0.996078, 0, 0.172549, 0.113725)

[node name="HealthBar" parent="." instance=ExtResource("7_tts6a")]
offset_left = -33.0
offset_top = -81.0
offset_right = 30.0
offset_bottom = -71.0

[node name="VisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
visible = false
position = Vector2(83, 53)
shape = SubResource("CircleShape2D_3ckoi")
debug_color = Color(0.756863, 0.454902, 0, 0.0666667)

[node name="UiDetails" type="Node2D" parent="."]
script = ExtResource("8_62yyd")
details = Array[ExtResource("9_a2ouy")]([SubResource("Resource_g8j7w"), SubResource("Resource_nlwm3")])

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_path_changed"]
